# pebble-agent-v3

./: API Server  Cargo.toml  DevelopRustpebble-agent-v3  homedavidgraupner  homedavidgraupnerDocumentsDevelopRustpebble-agent-v3
crates/agent/: Cargo.toml
crates/agent/src/: agent_core.rs  lib.rs  linux.rs  main.rs  platform_messages.rs  proxy.rs  windows.rs
crates/agent/src/actors/: mod.rs
crates/agent/src/actors/config/: actor.rs  arguments.rs  config.rs  messages.rs  mod.rs  state.rs
crates/agent/src/actors/connection_manager/: actor.rs  arguments.rs  messages.rs  mod.rs  state.rs  utils.rs
crates/agent/src/actors/controller/: actor.rs  arguments.rs  messages.rs  mod.rs  state.rs
crates/agent/src/registration/: challenge.rs  keys.rs  mod.rs
crates/api-server/: Cargo.toml
crates/api-server/src/: config.rs  error.rs  lib.rs  linux.rs  main.rs  properties.rs  responses.rs  scheduler.rs  server_core.rs  windows.rs
crates/api-server/src/api/: extensions.rs  middleware.rs  mod.rs
crates/api-server/src/api/v1/: cache.rs  info.rs  mod.rs  properties.rs  registration.rs
lib/agent-core/: Cargo.toml
lib/agent-core/src/: agent_registration.rs  jwt.rs  lib.rs  prelude.rs
lib/agent-core/src/constants/: folders.rs  mod.rs
lib/agent-database/: Cargo.toml  diesel.toml
lib/agent-database/src/: db.rs  errors.rs  lib.rs  query.rs  schema.rs  validators.rs
lib/agent-database/src/migrations/2025-12-05-183739-0000_connection_strings/: down.sql  up.sql
lib/agent-database/src/migrations/2025-12-05-214252-0000_tags/: up.sql
lib/agent-database/src/migrations/2025-12-06-184849-0000_events_table/: up.sql
lib/agent-database/src/migrations/2025-12-07-041202-0000_function_hashes_table/: down.sql  up.sql
lib/agent-database/src/migrations/2025-12-07-051505-0000_properties/: down.sql  up.sql
lib/agent-database/src/migrations/2025-12-18-171632-0000_encryption_keys/: down.sql  up.sql
lib/agent-database/src/migrations/2025-12-18-180455-0000_secrets/: up.sql
lib/agent-database/src/migrations/2025-12-21-031901-0000_cache/: down.sql  up.sql
lib/agent-database/src/migrations/2025-12-21-040116-0000_connection_stats/: down.sql  up.sql
lib/agent-database/src/migrations/2025-12-21-165819-0000_cache_tags/: down.sql  up.sql
lib/agent-database/src/migrations/2025-12-22-182321-0000_credential_tags/: down.sql  up.sql
lib/agent-database/src/migrations/2026-05-15-184729-0000_registration/: down.sql  up.sql
lib/agent-database/src/migrations/2026-05-17-190000-0000_agent_identities/: down.sql  up.sql
lib/agent-database/src/migrations/2026-05-19-190000-0000_agent_registration_challenge/: down.sql  up.sql
lib/agent-database/src/migrations/2026-06-06-190000-0000_agent_jwt/: down.sql  up.sql
lib/agent-database/src/models/: agent_identity.rs  agent_jwt.rs  cache.rs  cache_tags.rs  connection_stats.rs  connection_strings.rs  encryption_keys.rs  events.rs  function_hashes.rs  mod.rs  properties.rs  registration.rs  registration_challenges.rs  secret_tags.rs  secret_types.rs  secrets.rs  tags.rs
lib/agent-database/src/repositories/: agent_identity.rs  agent_jwt.rs  cache.rs  connection_stats.rs  connection_strings.rs  encrytion_keys.rs  events.rs  function_hashes.rs  mod.rs  properties.rs  registration.rs  registration_challenge.rs  secrets.rs  tags.rs
lib/agent-database/src/traits/: dynamic.rs  encryptor.rs  generic.rs  get_set.rs  mod.rs  name.rs  tag.rs
lib/agent-logging/: Cargo.toml
lib/agent-logging/src/: format.rs  lib.rs  output.rs
