[package]
name = "agent"
version = "0.1.0"
authors.workspace = true
homepage.workspace = true
categories.workspace = true
edition.workspace = true
license-file.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
agent-logging = { path = "../../lib/agent-logging" }
api-server = { path = "../api-server" }
agent-core = { path = "../../lib/agent-core" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.6.1", features=["derive"] }
anyhow = "1.0"
serde_json = "1.0"
reqwest={ version = "0.13.3",features = ["json"]}
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"
base64ct = { version = "1", features = ["alloc"] }