[package]
name = "agent"
version = "0.1.0"
authors.workspace = true
homepage.workspace = true
categories.workspace = true
edition.workspace = true
license-file.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
agent-logging = { path = "../../lib/agent-logging" }
api-server = { path = "../api-server" }
agent-core = { path = "../../lib/agent-core" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.6.1", features=["derive"] }
serde_json = "1.0"
reqwest={ version = "0.13.3",features = ["json"]}
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"
base64ct = { version = "1", features = ["alloc"] }
ractor="0.15.10"
tracing = "0.1.41"
tracing-appender = "0.2.3"
anyhow ="1.0.102"

[target.'cfg(windows)'.dependencies]
windows-service = "0.8.1"

# [target.'cfg(target_os = "linux")'.dependencies]
# # For handling systemd notifications (optional but recommended)
# libsystemd = "0.7"