[package]
name = "api-server"
version = "0.1.0"
authors.workspace = true
homepage.workspace = true
categories.workspace = true
edition.workspace = true
license-file.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
salvo={version="0.93.0", features=["affix-state","oapi"]}
tokio={version="1.52.3", features=["macros","signal"]}
agent-database = {path="../../lib/agent-database"}
tracing="0.1.44"
tracing-subscriber="0.3.23"
agent-core = {path="../../lib/agent-core"}
agent-logging = {path="../../lib/agent-logging"}
diesel = { version = "2.3.9", features = ["sqlite", "returning_clauses_for_sqlite_3_35","r2d2","chrono"] }
thiserror="2.0.18"
serde = { version = "1.0.228", features = ["derive"] }
serde_derive = "1.0.150"
serde_json="1.0.150"
tracing-appender = "0.2.3"
chrono = { version = "0.4.42", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
base64ct = { version = "1", features = ["alloc"] }
sha2 = "0.11"
ed25519-dalek = "2"
salvo-jwt-auth="0.93.0"
capitalize="0.3.4"
clap = { version = "4.0", features = ["derive"] }

[target.'cfg(windows)'.dependencies]
windows-service = "0.8.1"