[package]
name = "agent-core"
version = "0.1.0"
authors.workspace = true
homepage.workspace = true
categories.workspace = true
edition.workspace = true
license-file.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
sysinfo = "0.39.0"
machineid-rs="1.2.4"
serde = { version = "1.0", features = ["derive"] }
jsonwebtoken = {version="10.4.0", features=["rust_crypto"]}
secrecy = "0.10.3"
base64="0.22.1"
salvo-jwt-auth="0.93.0"
salvo={version="0.93.0", features=["oapi"]}

