[package]
name = "agent-database"
version = "0.1.0"
edition = "2024"

[dependencies]
diesel = { version = "2.3.9", features = ["sqlite", "returning_clauses_for_sqlite_3_35","r2d2","chrono"] }
diesel-derive-enum = {version="2.1.0", features=["sqlite"]}
libsqlite3-sys = { version = "0.37.0", features = ["bundled"] }
diesel_migrations = "2.3.1"
thiserror="2.0.17"
tracing={version="0.1.44", optional=true}
serde = { version = "1.0.228", features = ["derive"] }
serde_json="1.0.146"
chrono = { version = "0.4.42", features = ["serde"] }
machineid-rs="1.2.4"
strong-box={version="0.5.1"}
sha2="0.11.0"
once_cell="1.21.3"
base64="0.22.1"
secrecy = { version = "0.10.3", features = ["serde"] }
x25519-dalek = "2.0.1"
chacha20poly1305 = "0.10.1"
rand = "0.8"
petname="3.0.0"
strum="0.28.0"
strum_macros = "0.28.0"
uuid = { version = "1.0", features = ["v4"] }
base64ct = { version = "1", features = ["alloc"] }
salvo={version="0.93.0", features=["oapi"]}

[features]
default = ["tracing"]
