[package]
name = "agent-logging"
version = "0.1.0"
authors.workspace = true
homepage.workspace = true
categories.workspace = true
edition.workspace = true
license-file.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = {version="0.3.20", features = ["std", "json","ansi","env-filter","fmt","local-time"]}
